Fixed most layout issues. Nav bar is acting funny though.

--- a/assets/css/class-reg-form.css
+++ b/assets/css/class-reg-form.css
@@ -3,36 +3,32 @@
     margin-bottom: 20px;
 }
 
-.row-names {
-    
-}
-
 #input-first-name {
-    max-width: 400px;
+    max-width: 200px;
 }
 
 #input-last-name {
-    max-width: 400px;
+    max-width: 200px;
 }
 
 #input-email {
-    max-width: 400px;
+    max-width: 200px;
 }
 
 #input-phone {
-    max-width: 400px;
+    max-width: 200px;
 }
 
 #input-address-line-1 {
-    max-width: 400px;
+    max-width: 250px;
 }
 
 #input-address-line-2 {
-    max-width: 400px;
+    max-width: 250px;
 }
 
 #input-city {
-    max-width: 500px;
+    max-width: 200px;
 }
 
 #input-state {
@@ -40,15 +36,7 @@
 }
 
 #input-zip {
-    max-width: 500px;
-}
-
-.row-email-and-phone {
-
-}
-
-.row-address {
-
+    max-width: 200px;
 }
 
 #demo-col-1 {
@@ -61,13 +49,10 @@
     margin-bottom: 50px;
 }
 
-.row-demographics {
-
-}
-
 textarea {
-  resize: none; /* user can resize vertically, but width is fixed */
+  resize: none;
   max-width: 650px;
+  text-transform: uppercase;
 }
 
 #acknowledgement-checkbox {
@@ -79,4 +64,8 @@ textarea {
 #submit-button {
 	margin-top: 20px;
     margin-bottom: 50px;
+}
+
+form input[type=text] {
+    text-transform: uppercase;
 }
